# tree-sitter-crystal

./: .ameba.yml  .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  eslint.config.mjs  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/workflows/: ci.yml  compile_check.yml  crystal-ameba.yml  install-tree-sitter.sh
bindings/go/: binding_test.go
queries/: injections.scm
queries/nvim/: aerial.scm  context.scm  folds.scm  highlights.scm  injections.scm
src/: grammar.json  node-types.json  scanner.c
test/: crystal_parse_corpus.cr  crystal_parse_stdlib.cr  crystal_parse_stdlib_expected_to_fail.txt  crystal_parse_stdlib_fail.txt  s_exp_parser.cr  s_exp_visitor.cr  stdlib_coverage.cr  stdlib_coverage_expected_to_fail.txt  util.cr
test/corpus/: errors.txt  expressions.txt  literals.txt  macros.txt  statements.txt  todo.txt  types.txt
test/highlight/: annotations.cr  arrays.cr  blocks.cr  hashes.cr  methods.cr  operators.cr  regex.cr  tuples.cr  types.cr
