[package]
authors = [
  "Gabriel Holodak <gthepiper@gmail.com>",
  "Devonte (devnote-dev)",
  "Hugo Parente Lima (hugopl)",
  "Margret Riegert (nobodywasishere) <margret@eowyn.net>",
]
autoexamples = false
categories = ["parsing", "text-editors"]
description = "Crystal grammar for tree-sitter"
edition = "2021"
keywords = ["incremental", "parsing", "tree-sitter", "crystal"]
license = "MIT"
name = "tree-sitter-crystal"
readme = "README.md"
repository = "https://github.com/crystal-lang-tools/tree-sitter-crystal"
version = "0.0.1"

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*", "tree-sitter.json"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.4"
